exports[`BookingDatesForm matches snapshot with selected dates 1`] = `
<form
  className={null}
  onSubmit={[Function]}>
  <DateRangeInputField
    endDateId="fakeTestForm.bookingEndDate"
    endDateLabel="BookingDatesForm.bookingEndTitle"
    endDatePlaceholderText="tomorrow"
    format={null}
    name="bookingDates"
    startDateId="fakeTestForm.bookingStartDate"
    startDateLabel="BookingDatesForm.bookingStartTitle"
    startDatePlaceholderText="today"
    useMobileMargins={true}
    validate={
      Array [
        [Function],
        [Function],
      ]
    } />
  <div>
    <h3>
      <FormattedMessage
        id="BookingDatesForm.priceBreakdownTitle"
        values={Object {}} />
    </h3>
    <BookingBreakdown
      bookingEnd={2017-04-16T00:00:00.000Z}
      bookingStart={2017-04-14T00:00:00.000Z}
      lineItems={
        Array [
          Object {
            "code": "line-item/night",
            "lineTotal": Money {
              "amount": 2198,
              "currency": "USD",
            },
            "quantity": "2",
            "unitPrice": Money {
              "amount": 1099,
              "currency": "USD",
            },
          },
        ]
      }
      payinTotal={
        Money {
          "amount": 2198,
          "currency": "USD",
        }
      }
      unitPrice={
        Money {
          "amount": 1099,
          "currency": "USD",
        }
      }
      userRole="customer" />
  </div>
  <p>
    <FormattedMessage
      id="BookingDatesForm.youWontBeChargedInfo"
      values={Object {}} />
  </p>
  <PrimaryButton
    disabled={false}
    type="submit">
    <FormattedMessage
      id="BookingDatesForm.requestToBook"
      values={Object {}} />
  </PrimaryButton>
</form>
`;

exports[`BookingDatesForm matches snapshot without selected dates 1`] = `
<form
  className={null}
  onSubmit={[Function]}>
  <DateRangeInputField
    endDateId="fakeTestForm.bookingEndDate"
    endDateLabel="BookingDatesForm.bookingEndTitle"
    endDatePlaceholderText="tomorrow"
    format={null}
    name="bookingDates"
    startDateId="fakeTestForm.bookingStartDate"
    startDateLabel="BookingDatesForm.bookingStartTitle"
    startDatePlaceholderText="today"
    useMobileMargins={true}
    validate={
      Array [
        [Function],
        [Function],
      ]
    } />
  <p>
    <FormattedMessage
      id="BookingDatesForm.youWontBeChargedInfo"
      values={Object {}} />
  </p>
  <PrimaryButton
    disabled={true}
    type="submit">
    <FormattedMessage
      id="BookingDatesForm.requestToBook"
      values={Object {}} />
  </PrimaryButton>
</form>
`;
